[gd_scene load_steps=15 format=3 uid="uid://dw4fw5d1x21qf"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/item_select_container.gd" id="1_ywnyu"]
[ext_resource type="Shader" path="res://Shader/Reveal/reveal.gdshader" id="2_aslxc"]
[ext_resource type="PackedScene" uid="uid://c12w8jpic416k" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPList/SCPLIST.tscn" id="4_5uscs"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="4_vorlv"]
[ext_resource type="PackedScene" uid="uid://drfnsxi54q7yo" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPDetails/SCPDetails.tscn" id="8_emlcs"]
[ext_resource type="PackedScene" uid="uid://bew0flo0hhy3s" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPActions/SCPActions.tscn" id="9_wcryc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rx75c"]
shader = ExtResource("2_aslxc")
shader_parameter/percentage = 0.0
shader_parameter/angle_degrees = 0.0
shader_parameter/line_width = 0.02
shader_parameter/line_color = Color(0, 0.964706, 0.278431, 1)
shader_parameter/laser_color = Color(1, 0, 0, 1)
shader_parameter/glow_width = 0.05
shader_parameter/trail_fade = 0.5

[sub_resource type="ViewportTexture" id="ViewportTexture_tla5t"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrrr3"]
bg_color = Color(0, 0.254902, 0.0823529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c10u1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_304q5"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6qis"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odmyf"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_r0lcp"]

[node name="ContainmentContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ywnyu")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_rx75c")
layout_mode = 2
texture = SubResource("ViewportTexture_tla5t")
stretch_mode = 2

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(950, 600)

[node name="PanelContainer" type="PanelContainer" parent="SubViewport"]
custom_minimum_size = Vector2(950, 550)
offset_right = 950.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yrrr3")

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="SubViewport/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c10u1")

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvailableTabBtn" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/HBoxContainer" instance=ExtResource("4_vorlv")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_304q5")
title = "AVAILABLE"

[node name="ContainedTabBtn" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/HBoxContainer" instance=ExtResource("4_vorlv")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u6qis")
title = "IN CONTAINMENT"

[node name="BackBtn" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3" instance=ExtResource("4_vorlv")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_odmyf")
title = "BACK"

[node name="HSeparator" type="HSeparator" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_r0lcp")

[node name="HBoxContainer2" type="HBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="List" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_5uscs")]
layout_mode = 2

[node name="Details" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("8_emlcs")]
layout_mode = 2

[node name="Actions" parent="SubViewport/PanelContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("9_wcryc")]
layout_mode = 2

[connection signal="item_rect_changed" from="SubViewport/PanelContainer" to="." method="_on_subviewport_child_changed"]
